--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,11 @@
       crossorigin="anonymous"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Graph Visualization</title>
   </head>
   <body>
