--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
       rel="stylesheet"
     />
 
