gtag/google-analytics added

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,20 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HBV814BLXB"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
+      gtag('config', 'G-HBV814BLXB');
+    </script>
     <title>Graph Visualization</title>
   </head>
   <body>
