--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
       gtag('config', 'G-HBV814BLXB');
     </script>
-    <title>Graph Visualization</title>
+    <title>Pathfinding Visualizer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
